--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -227,7 +227,7 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: #fafafa;       
+  background: transparent;       
   border-radius: 100px;
 }
 
